--- a/packages/economy/playground/src/styles.scss
+++ b/packages/economy/playground/src/styles.scss
@@ -1,3 +1,6 @@
+@import 'https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css';
+@import 'https://cdn.jsdelivr.net/npm/bulma-list@1.2.0/css/bulma-list.min.css';
+
 body {
   margin: 0;
   padding: 0;
